--- a/assignment 1.ipynb
+++ b/assignment 1.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "#1. In the below elements which of them are values or an expression? eg:- values can be integer or string and expressions will be mathematical operators.\n",
-    " * (expression)\n",
+    " \* (expression)\n",
     "\"hello\"(string) \n",
     "-87.8 (float/integer)\n",
     "-(expression)\n",
