--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3d6eaee4",
+   "id": "777dcc38",
    "metadata": {},
    "source": [
-    "1.What are the two values of the Boolean data type? How do you write them?\n",
+    "#1.What are the two values of the Boolean data type? How do you write them?\n",
     "\n",
     "The two values of boolean data type 0 and 1.\n",
     "\n",
@@ -15,10 +15,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e8f6d84",
+   "id": "39ded8ae",
    "metadata": {},
    "source": [
-    "2. What are the three different types of Boolean operators?\n",
+    "#2. What are the three different types of Boolean operators?\n",
     "\n",
     "The three different types of boolean operators are :\n",
     "\n",
@@ -29,10 +29,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7824f151",
+   "id": "2e91a9e7",
    "metadata": {},
    "source": [
-    "3. Make a list of each Boolean operator's truth tables (i.e. every possible combination of Boolean\n",
+    "#3. Make a list of each Boolean operator's truth tables (i.e. every possible combination of Boolean\n",
     "values for the operator and what it evaluate ).\n",
     "\n",
     "And operator truth table \n",
@@ -57,10 +57,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "082b42db",
+   "id": "508c078b",
    "metadata": {},
    "source": [
-    "4. What are the values of the following expressions?\n",
+    "#4. What are the values of the following expressions?\n",
     "\n",
     "(5 > 4) and (3 == 5) = 1 and 0 = 0 ;\n",
     "\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca2da2ae",
+   "id": "44750107",
    "metadata": {},
    "source": [
     "5. What are the six comparison operators?\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b94757e",
+   "id": "473be15e",
    "metadata": {},
    "source": [
     "6. How do you tell the difference between the equal to and assignment operators?Describe a\n",
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0a240c17",
+   "id": "bd29e766",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6e2f94df",
+   "id": "9e15c29d",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48288a9c",
+   "id": "0925192b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f749db1",
+   "id": "202b0b1d",
    "metadata": {},
    "outputs": [],
    "source": []
